ArgoCD GitOps/Widgets + CORS/deployments/backend-widgets-cors-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-widgets-cors-ingress
  labels:
    name: backend-widgets-cors-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: widgets-cors.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: widgets-cors-svc
            port: 
              number: 80
