ArgoCD GitOps/Widgets + CORS/deployments/frontend-widgets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-widgets-ingress
  labels:
    name: frontend-widgets-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: widgets.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: widgets-svc
            port: 
              number: 80
